<resources>
    <string name="app_name">CommentSold</string>
    <!-- Strings related to login -->
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login Failed</string>
    <string name="invalid_email_or_password">Invalid Email or Password. Please try again.</string>
    <string name="products">Products</string>
    <string name="add_product">Add Product</string>
    <string name="brand">Brand</string>
    <string name="add">Add</string>
    <string name="note">Notes</string>
    <string name="description">Description</string>
    <string name="product_name">Product Name</string>
    <string name="product_id">Product Id</string>
    <string name="product_type">Product Type</string>
    <string name="price">Shipping Price</string>
    <string name="style">Style</string>
    <string name="select_a_style">Select a Style</string>
    <string name="url">Url</string>
    <string name="created_at">Created at</string>
    <string name="updated_at">Updated at</string>
    <string name="edit">Edit product</string>
    <string name="delete_product_error">Delete Error</string>
    <string name="delete_product">Delete Product</string>
    <string name="verify_delete_product">Delete %s?</string>
    <string name="error_deleting_product">Error deleting product id %d</string>
    <string name="alphanumeric">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890</string>

    <string name="invalid_product_id">Product ID cannot be empty</string>
    <string name="invalid_product_name">Product name cannot be empty</string>
    <string name="invalid_product_type">Product type cannot be empty</string>
    <string name="invalid_brand">Brand cannot be empty</string>
    <string name="invalid_style">Style cannot be empty</string>
    <string name="invalid_price">Price cannot be empty</string>
    <string name="invalid_description">Description cannot be empty</string>

    <!-- Tools text -->
    <string name="lorem_ipsum_title">Lorem ipsum</string>
    <string name="lorem_ipsum_title_long">Lorem ipsum incididunt ut elit consectetur adipiscing</string>
    <string name="lorem_ipsum_medium">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
        anim id est laborum.</string>
</resources>